Eu escrevi um texto no index

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     </header>
     <input type="text" id="input">
     <div id="keys">
+      <h1>HOJE È DIA DE CODE</h1>
       <button id="clear">C</button>
       <button class="charKey" data-value=" ( ">(</button>
       <button class="charKey" data-value=" ) ">)</button>
