teste commit branch

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
   <main data-theme="dark">
     <header class="flex align-center justify-between">
+      <h2>teste branch</h2>
       <h1>Calc.js</h1>
       <button id="themeSwitcher">Switch Theme Dark/Light</button>
     </header>
