--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
   <main data-theme="dark">
     <header class="flex align-center justify-between">
+      <h3>agora vai</h3>
       <h2>XD XD </h2>
       <h1>Calc.js</h1>
       <button id="themeSwitcher">Switch Theme Dark/Light</button>
